<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/txtSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_title"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/lySettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSettingsTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtIDSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_IDDevice"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtClientSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_Client"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyTxtSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lySettingsTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtIDDevice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_IDDevice"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txtClient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_Client"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lySettingsBtn"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExit"
            style="buttonBarStyle"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onExitClick"
            android:text="@string/settings_exitActivity" />

        <Button
            android:id="@+id/btnSave"
            style="buttonBarStyle"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/settings_saveData" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lySettings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyTxtSettings"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPasswordSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_Password"
            android:textSize="18sp" />

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lySettings2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_Password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Space
            android:id="@+id/space2"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>