<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/settings_Password"
        android:textColor="#000000"
        android:textColorHint="#786F6F"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLoginTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/hint_Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#786F6F"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/login_dialog" />

    <Button
        android:id="@+id/btnExit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/btnExit"
        android:text="@string/settings_exitActivity" />
</RelativeLayout>